; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_deprecated.c_pack_notify_wrapper_func.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_deprecated.c_pack_notify_wrapper_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }
%struct.pack_notify_wrapper_baton = type { i32, i32 (i32, i32, i64, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.TYPE_3__*, i32*)* @pack_notify_wrapper_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pack_notify_wrapper_func(i8* %0, %struct.TYPE_3__* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.pack_notify_wrapper_baton*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.pack_notify_wrapper_baton*
  store %struct.pack_notify_wrapper_baton* %9, %struct.pack_notify_wrapper_baton** %7, align 8
  %10 = load %struct.pack_notify_wrapper_baton*, %struct.pack_notify_wrapper_baton** %7, align 8
  %11 = getelementptr inbounds %struct.pack_notify_wrapper_baton, %struct.pack_notify_wrapper_baton* %10, i32 0, i32 1
  %12 = load i32 (i32, i32, i64, i32*)*, i32 (i32, i32, i64, i32*)** %11, align 8
  %13 = load %struct.pack_notify_wrapper_baton*, %struct.pack_notify_wrapper_baton** %7, align 8
  %14 = getelementptr inbounds %struct.pack_notify_wrapper_baton, %struct.pack_notify_wrapper_baton* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = sub nsw i64 %21, 3
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 %12(i32 %15, i32 %18, i64 %22, i32* %23)
  %25 = call i32 @svn_error_clear(i32 %24)
  ret void
}

declare dso_local i32 @svn_error_clear(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
